# fastgrams

./: CMakeLists.txt  README.md  pyproject.toml
fastgrams/: __init__.py  ngrams.py
src/cpp/: ngrams.cpp
tests/: test_fastgrams.py
